# ghnotifier-rs

./: Cargo.toml  Config.toml  Config.toml.dist  README.md
assets/: ghnotifier.desktop
src/: asset.rs  config.rs  github_client.rs  indicator.rs  logger.rs  main.rs  menu.rs  notifier.rs  settings.rs  settings_window.rs  worker.rs
src/cli/: application.rs  mod.rs  output.rs
src/cli/command/: install.rs  mod.rs  run.rs  run_detached.rs  self_update.rs  start.rs  uninstall.rs
src/infrastructure/: logger.rs  mod.rs
src/infrastructure/console/: console_output.rs  mod.rs
src/infrastructure/factory/: logger_factory.rs  mod.rs  notifier_factory.rs  output_factory.rs
src/infrastructure/file/: config.rs  file_logger.rs  mod.rs
src/infrastructure/noop/: mod.rs  noop_notifier.rs  noop_output.rs
src/infrastructure/reqwest/github/: github_client.rs  mod.rs
src/infrastructure/reqwest/github/notification/: mod.rs  notification_client.rs
src/infrastructure/system/: mod.rs  system_notifier.rs
src/notifier/: mod.rs  noop_notifier.rs  system_notifier.rs
src/ui/: mod.rs
src/ui/cli/: application.rs  mod.rs  output.rs
src/ui/cli/command/: install.rs  run.rs  run_detached.rs  self_update.rs  uninstall.rs
src/ui/gui/: indicator.rs  mod.rs  notifier.rs  worker.rs
src/ui/gui/menu/: mod.rs  open_notifications.rs  quiet_mode.rs  quit.rs  settings.rs
src/ui/gui/window/: settings.rs
