[package]
name = "github-notifier-rs"
version = "0.1.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
libappindicator = "0.4.0"
glib= "0.5.0"
gtk= "0.4.0"
gtk-sys= "0.6.0"
notify-rust = "3"
webbrowser= "0.4.0"
reqwest="0.9.5"
serde = "1.0.84"
serde_json="1.0.3"
serde_derive="1.0.84"
config = "0.9"

[features]
default = ["gtk/v3_10"]
