[package]
name = "ghnotifier"
version = "0.2.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
arc-guard = "0.2.0"
clap = "2.32.0"
config = "0.9"
chrono = "0.4.6"
dirs = "1.0.4"
glib = "0.5.0"
gtk = "0.4.0"
gtk-sys = "0.6.0"
libappindicator = "0.4.0"
libc = "0.2.49"
log = "0.4.6"
notify-rust = "3"
reqwest = {version = "0.9", features = ["hyper-011"]}
serde = "1.0.84"
serde_json ="1.0.3"
serde_derive = "1.0.84"
simple-logging = "2.0.2"
structopt = "0.2.13"
webbrowser = "0.4.0"

[features]
default = ["gtk/v3_16"]
